Fix code wrap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -69,4 +69,8 @@
   sup {
     @apply ml-0.5;
   }
+
+  pre {
+    @apply whitespace-pre-wrap;
+  }
 }
